--- a/MOBILE/MyFirstApp/app/src/main/res/values/strings.xml
+++ b/MOBILE/MyFirstApp/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="key_val">sixteen_byte_key</string>
 
     <string name="title_activity_settings">Settings</string>
+    <string name="title_clear_messages">Clear Messages</string>
 </resources>
